<resources>
    <string name="app_name">BookWishlist</string>
    <string name="wishlists">Wishlists</string>
    <string name="users">Users</string>
    <string name="viewallbooks">View All Books</string>
    <string name="allbooks">All Books</string>
    <string name="books">Books</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="bookinformation">Book Information</string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="summary">Summary: "</string>
    <string name="isbn">ISBN: </string>
    <string name="dateofpublication">Date of Publication: </string>

    <string name="adduser">Add User</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
</resources>
