<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.mitchlustig.bookwishlist.Router" />
        <variable name="viewmodel" type="com.mitchlustig.bookwishlist.activity.user.AddUserViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="50sp"
            android:padding="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookinformation"
            android:textColor="@color/black"
            android:background="@color/cyan"
            android:gravity="center_vertical"
            android:textSize="50sp"
            android:padding="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:text="@{viewmodel.getFirstName()}"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:text="@{viewmodel.getLastName()}"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:text="@{viewmodel.getEmail()}"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:text="@string/adduser"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:onClick="@{v -> viewmodel.submit()}"/>
    </LinearLayout>
</layout>
