<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.mitchlustig.bookwishlist.Router"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allbooks"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="50sp"
            android:padding="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/books"
            android:textColor="@color/black"
            android:background="@color/cyan"
            android:gravity="center_vertical"
            android:textSize="50sp"
            android:padding="20dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingTop="80dp"
            android:paddingBottom="80dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right|center_vertical"
            android:padding="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:text="@string/viewallbooks"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginRight="20dp"
                android:onClick="@{v -> Router.allBooks(v.getContext())}"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:text="@string/home"
                android:padding="20dp"
                android:textSize="20sp"
                android:onClick="@{v -> Router.home(v.getContext())}"/>
        </LinearLayout>
    </LinearLayout>
</layout>
