<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <import type="com.mitchlustig.bookwishlist.Router" />
        <variable name="viewmodel" type="com.mitchlustig.bookwishlist.activity.HomeViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wishlists"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="50sp"
            android:padding="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/users"
            android:textColor="@color/black"
            android:background="@color/cyan"
            android:gravity="center_vertical"
            android:textSize="50sp"
            android:padding="20dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@color/white">

            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewmodel.isLoading() ? View.VISIBLE : View.GONE}"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="80dp"
                android:paddingBottom="80dp"
                android:visibility="@{!viewmodel.isLoading() ? View.VISIBLE : View.GONE}" />

        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:text="@string/viewallbooks"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:onClick="@{(view) -> Router.allBooks(view.getContext())}"/>
    </LinearLayout>
</layout>
