<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.mitchlustig.bookwishlist.Router" />
        <variable name="viewmodel" type="com.mitchlustig.bookwishlist.activity.book.BookViewModel"/>
        <variable name="book" type="com.mitchlustig.bookwishlist.service.Model.Book"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textSize="50sp"
            android:padding="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookinformation"
            android:textColor="@color/black"
            android:background="@color/cyan"
            android:gravity="center_vertical"
            android:textSize="50sp"
            android:padding="20dp"/>

        <ScrollView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingTop="80dp"
            android:paddingBottom="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:paddingLeft="80sp"
                    android:paddingRight="80sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text='@{viewmodel.getTitle()}'/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:paddingLeft="80sp"
                    android:paddingRight="80sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text="@{viewmodel.getAuthor()}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:paddingLeft="80sp"
                    android:paddingRight="80sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text="@{viewmodel.getIsbn()}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:paddingLeft="80sp"
                    android:paddingRight="80sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text="@{viewmodel.getDate()}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:paddingLeft="80sp"
                    android:paddingRight="80sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text="@{viewmodel.getSummary()}"/>

            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:text="@string/home"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:onClick="@{v -> Router.home(v.getContext())}"/>
    </LinearLayout>
</layout>
